# simple-sokoban-project

./: .gitignore  CMakeLists.txt  Readme.md  graphics.h  images.h  levels.h  player.h  sounds.h  utilities.h  vcpkg.json
data/: levels.sl
sokoban/: CMakeLists.txt  globals.h  sokoban.cpp  vcpkg.json
sokoban/data/: levels.sl
